feat: :fire: modify css

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@
 		background-image: url("images/bg.jpg");
 		background-position: bottom left;
 		background-repeat: repeat-x;
+    background-size: cover;
 		height: 100%;
 		left: 0;
 		opacity: 1;
